--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -12,6 +12,7 @@
     width: 15vw;
     height: 200px;
     align-self: center;
+    margin-left: 30px;
 }
 
 .sidebar-links {
